--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 
 .container {
   margin: auto;
-  width: 60%;
+  width: 300px;
 }
 
 .buttons {
@@ -42,17 +42,43 @@ h1 {
 
 .timer {
   position: relative;
-  height: 300;
-  width: 300;
+  width: 300px;
+  height: 300px;
 }
 
 .timer-label {
-  position: relative;
-  height: 300;
-  width: 300;
+  position: absolute;
+  width: 300px;
+  height: 300px;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 4rem;
+}
+
+.timer-svg {
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  transform: scaleX(-1);
+}
+
+.timer-circle {
+  fill: none;
+  stroke: none;
+}
+
+.timer-path-gray {
+  stroke-width: 7px;
+  stroke: #dedede;
+}
+
+.timer-path-green {
+  stroke-width: 7px;
+  stroke: #50fa7b;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
 }
